# proofpulse

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
apps/api/: requirements.txt
apps/api/proofpulse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/proofpulse_api/: core.py  main.py  models.py
apps/api/proofpulse_api/static/: app.js  index.html  styles.css
apps/web/: index.html
contracts/: EvidenceAnchor.interface.md  ProofPulseAnchor.sol
docs/: ARCHITECTURE.md  AWS_ACTIVATE_APPLICATION.md  CODEX_NEXT_PROMPT.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DORA_SUBMISSION.md  FAQ.md  PITCH.md  ROADMAP.md  WINNING_STRATEGY.md
examples/: sample_evidence_bundle.json
infra/: aws-reference.md
infra/terraform/: main.tf  variables.tf
scripts/: demo_curl.sh  generate_evidence_bundle.py  one_command_demo.py  verify_bundle.py
tests/: test_api.py  test_hashing.py
tests/e2e/: proofpulse-dashboard.spec.js
